<resources>
    <string name="app_name">Calculator_V2</string>
    <string name="C">C</string>
    <string name="Hooks">()</string>
    <string name="Percent">%</string>
    <string name="Delete">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Multiplication">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Subtraction">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Plus">+</string>
    <string name="Plus_minus">+/-</string>
    <string name="_0">0</string>
    <string name="Dot">.</string>
    <string name="Equal">=</string>
    <string name="lets_calculate">Lets Calculate!</string>
    <string name="Theme_one">ThemeOne</string>
    <string name="Theme_two">ThemeTwo</string>
    <string name="settings">Settings</string>
    <string name="back_to_calculator">Back to Calculator</string>
    <string name="Theme_choice">Theme choosing:</string>
</resources>