<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:background="@drawable/sea">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:rowCount="4">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Theme_choice"
            android:textColor="@color/white"
            android:textSize="@dimen/TV_settings" />

        <RadioGroup
            android:layout_width="@dimen/RadioGroupWidth"
            android:layout_height="@dimen/RadioGroup_Height">

            <RadioButton
                android:id="@+id/ThemeOne"
                android:layout_width="@dimen/RadioButton_width"
                android:layout_height="@dimen/RadioButton_height"
                android:layout_weight="1"
                android:text="@string/Theme_one"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/ThemeTwo"
                android:layout_width="@dimen/RadioButton_width"
                android:layout_height="@dimen/RadioButton_height"
                android:layout_weight="1"
                android:text="@string/Theme_two"
                android:textColor="@color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/Back"
            android:layout_width="@dimen/RadioButton_width"
            android:layout_height="@dimen/RadioButton_height"
            android:layout_rowSpan="2"
            android:text="@string/back_to_calculator"
            android:textSize="@dimen/button_settings_size"
            tools:ignore="SmallSp">

        </Button>


    </GridLayout>


</FrameLayout>

